feat: 친구 일별 골격근 조회